--- a/src/ishi/50-layouts/sidebar-below/_group-a.scss
+++ b/src/ishi/50-layouts/sidebar-below/_group-a.scss
@@ -40,7 +40,6 @@ body > footer {
 }
 
 footer .content {
-    @include util-pad-column();
     @include util-pad-flexbox();
 }
 
